# RawCodEt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  remote-compiller.pro
.github/workflows/: build.yml
client/: CMakeLists.txt  RawCodEt.pro  client.pro  console.cpp  file_tools.cpp  main.cpp  mainwindow.cpp  mainwindow.h  theme.h
html`s/: editor.html  editor_cdn.html  editor_local.html
protocol/: CMakeLists.txt  message.cpp  message.h  protocol.pro
server/: CMakeLists.txt  compilerserver.cpp  compilerserver.h  main.cpp  server.pro  users.json
